fix spacing conditioned by logo presence; ignore zip pkg for branch

--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -18,7 +18,7 @@ body {
 	background: #111;
 	padding-top: 45px;
 	-webkit-font-smoothing: antialiased;
-	.content-main {
+	.content-has-logo {
 		padding-top: 25px
 	}
 
@@ -29,7 +29,7 @@ body {
 	}
 
 	.navbar-fixed-top {
-		ul.nav {
+		ul.content-has-logo {
 			margin-top: 14px
 		}
 	}
